<resources>
    <string name="app_name">Dnevnik Čitanja</string>
    <string name="dialog_dodaj_knjigu_hint">Naslov</string>
    <string name="dialog_naziv">Dodaj knjigu</string>
    <string name="odustani">Odustani</string>
    <string name="spremi">Spremi</string>
    <string name="Lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis blandit augue. Quisque consequat pretium commodo. Fusce eleifend magna eu congue sagittis. Duis augue diam, fermentum sed tincidunt quis, finibus eu ipsum. Curabitur eu tristique eros. Mauris ultrices viverra dolor sit amet cursus. Morbi auctor, nunc eu feugiat finibus, mi turpis venenatis libero, hendrerit vestibulum risus magna eget enim. Curabitur feugiat eleifend urna, vitae interdum velit congue eu. Integer pharetra lectus eu semper scelerisque.</string>
    <string name="naslov_tekst">Naslov</string>
    <string name="pisac_tekst">Pisac</string>
    <string name="pisac_nije_definiran">Pisac nije definiran</string>
    <string name="knjizevna_vrsta_tekst">Književna vrsta:</string>
    <string name="nije_definirano">Nije definirano</string>
    <string name="broj_stranica_tekst">Broj stranica</string>
    <string name="kratki_sadrzaj_tekst">Kratki sadržaj:</string>
    <string name="dialog_uredi_naslov">Uredi naslov</string>
    <string name="uredi_broj_stranica">Uredi broj stranica</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ime_pisca_tekst">Ime pisca</string>
    <string name="biljeska_o_piscu_tekst">Bilješka o piscu:</string>
    <string name="empty">-</string>
    <string name="ime_pisca_hint">Ime pisca</string>
    <string name="dodaj_pisca_tekst">Dodaj pisca</string>
    <string name="dialog_obrisi_knjigu_tekst">Želite li obrisati knjigu?</string>
    <string name="dialog_obrisi_pisca_tekst">Želite li obrisati pisca?</string>
    <string name="uredi">Uredi</string>
    <string name="uredi_ime_pisca">Uredi ime pisca</string>
    <string name="citati_tekst">Citati</string>
    <string name="likovi_tekst">Likovi</string>
    <string name="prostor_i_vrijeme_tekst">Prostor i vrijeme:</string>
    <string name="tema_djela_tekst">Tema djela:</string>
    <string name="jezik_i_stil_tekst">Jezik i stil:</string>
    <string name="dialog_obrisi_knjizevnu_vrstu_tekst">Želite li obrisati književnu vrstu?</string>
    <string name="dodaj_knjizevnu_vrstu_tekst">Dodaj književnu vrstu</string>
    <string name="uredi_knjizevnu_vrstu_tekst">Uredi književnu vrstu</string>
    <string name="broj_stranica">Broj stranica: </string>
    <string name="citat_tekst">Citat</string>
    <string name="opis_citata">Opis citata:</string>
    <string name="dodaj_citat_tekst">Dodaj citat</string>
    <string name="dialog_obrisi_citat_tekst">Želite li obrisati citat?</string>
    <string name="broj_stranice_tekst">Broj stranice: </string>
    <string name="broj_stranice_hint">Broj stranice</string>
    <string name="citat_holder">"%1$s"</string>
    <string name="citati">Citati:</string>
    <string name="opis_lika_tekst">Opis lika:</string>
    <string name="dodaj_lika_tekst">Dodaj lika</string>
    <string name="ime_lika_hint">Ime lika</string>
    <string name="dialog_obrisi_lika_tekst">Želite li obrisati lika?</string>
    <string name="ime_lika">Ime lika:</string>
    <string name="opis_lika">Opis lika:</string>
    <string name="dodaj_kategoriju">Dodaj kategoriju</string>
    <string name="dodaj_kategoriju_text">Dodaj kategoriju</string>
    <string name="naziv_kategorije_tekst">Naziv kategorije</string>
    <string name="dialog_obrisi_kategoriju_tekst">Želite li obrisati kategoriju?</string>
    <string name="dodaj_atribut_tekst">Dodaj atribut</string>
    <string name="naziv_atributa_tekst">Naziv atributa</string>
    <string name="edit_icon_text">edit icon</string>
    <string name="edit_text">Edit</string>
    <string name="dialog_obrisi_atribut_tekst">Želite li obrisati atribut?</string>
    <string name="opis_tekst">Opis</string>
    <string name="uredi_atribut_tekst">Uredi atribut</string>
    <string name="izvezi_kao_pdf_tekst">Izvezi kao pdf</string>
    <string name="trazi">Traži</string>
    <string name="broj_knjiga">Ukupan broj knjiga: </string>
    <string name="statistika">Statistika</string>
    <string name="ukupan_broj_pisca">Ukupan broj pisaca: </string>
    <string name="ukupan_broj_knjizevnih_vrsta">Ukupan broj književnih vrsta: </string>
    <string name="ukupan_broj_likova">Ukupan broj likova:</string>
    <string name="ukupan_broj_citata">Ukupan broj citata:</string>
    <string name="ukupan_broj_kategorija">Ukupan broj kategorija:</string>


</resources>
