<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_knjiga"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardViewBackground"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/knjiga_naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:id="@+id/naslov_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/naslov_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/naslov_knjige"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/naslov_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/knjiga_pisac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:id="@+id/pisac_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/pisac_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/pisac_knjige"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pisac_tekst"
                android:text="@string/pisac_nije_definiran"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/pisac_biljeska"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/pisac_biljeska_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/biljeska_o_piscu_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/biljeska_pisac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pisac_biljeska_tekst"
                android:text="@string/empty"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </RelativeLayout>

        <View
            android:id="@+id/biljeska_linija_ispod"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/knjiga_broj_stranica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:id="@+id/broj_stranica_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/broj_stranica_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/broj_stranica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/broj_stranica_tekst"
                android:text="@string/nije_definirano"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/knjiga_knjizevna_vrsta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:id="@+id/knjizevna_vrsta_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/knjizevna_vrsta_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/knjizevna_vrsta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/knjizevna_vrsta_tekst"
                android:text="@string/nije_definirano"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/knjiga_kratki_sadrzaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:id="@+id/kratki_sadrzaj_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/kratki_sadrzaj_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/kratki_sadrzaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/kratki_sadrzaj_tekst"
                android:text="@string/nije_definirano"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/knjiga_tema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:id="@+id/tema_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/tema_djela_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/tema_djela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tema_tekst"
                android:text="@string/nije_definirano"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/knjiga_prostor_i_vrijeme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:id="@+id/prostor_i_vrijeme_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/prostor_i_vrijeme_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/prostor_i_vrijeme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prostor_i_vrijeme_tekst"
                android:text="@string/nije_definirano"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/knjiga_jezik_i_stil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:id="@+id/jezik_i_stil_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/jezik_i_stil_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/jezik_i_stil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/jezik_i_stil_tekst"
                android:text="@string/nije_definirano"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/knjiga_citati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/citati_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/knjiga_likovi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/likovi_tekst"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_kategorije"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/kategorija_item"/>


        <Button
            android:id="@+id/gumb_pridjeli_kategoriju"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_selector"
            android:padding="8dp"
            android:text="@string/dodaj_kategoriju"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:foreground="?android:attr/selectableItemBackground"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>