<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.BiljeskaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:labelFor="@id/citat_edit"
        android:text="@string/citati"/>

    <EditText
        android:id="@+id/citat_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:background="@color/cardViewBackground"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:autofillHints=""
        android:maxHeight="200dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broj_stranice_tekst"
        android:layout_marginStart="15dp"
        android:labelFor="@id/citat_broj_stranice_edit"/>

    <EditText
        android:id="@+id/citat_broj_stranice_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:background="@color/cardViewBackground"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:autofillHints=""
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opis_citata"
        android:labelFor="@id/citat_opis_edit"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/citat_opis_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:background="@color/cardViewBackground"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:autofillHints="" />

</androidx.appcompat.widget.LinearLayoutCompat>